# android-inline-hook

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  build.gradle  clang-format.py  gradle.properties  settings.gradle
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature-request.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/hookee/: asm.h  hookee.c  hookee.h
app/src/main/cpp/hookee/arch/arm/: a32.S  t16.S  t32.S
app/src/main/cpp/hookee/arch/arm64/: a64.S
app/src/main/cpp/hookee2/: hookee2.c  hookee2.h
app/src/main/cpp/unittest/: unittest.c  unittest.h  unittest_jni.c
app/src/main/java/com/bytedance/shadowhook/sample/: MainActivity.java  MyCustomApplication.java  NativeHandler.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
doc/: README.md  manual.md  manual.zh-CN.md
gradle/: publish.gradle
gradle/wrapper/: gradle-wrapper.properties
shadowhook/: build.gradle  consumer-rules.pro  local_dependency.cmake
shadowhook/src/main/: AndroidManifest.xml
shadowhook/src/main/cpp/: CMakeLists.txt  sh_elf.c  sh_elf.h  sh_enter.c  sh_enter.h  sh_exit.c  sh_exit.h  sh_hub.c  sh_hub.h  sh_island.c  sh_island.h  sh_jni.c  sh_linker.c  sh_linker.h  sh_recorder.c  sh_recorder.h  sh_safe.c  sh_safe.h  sh_switch.c  sh_switch.h  sh_task.c  sh_task.h  shadowhook.c  shadowhook.map.txt
shadowhook/src/main/cpp/arch/arm/: sh_a32.c  sh_a32.h  sh_glue.S  sh_inst.c  sh_inst.h  sh_t16.c  sh_t16.h  sh_t32.c  sh_t32.h  sh_txx.c  sh_txx.h
shadowhook/src/main/cpp/arch/arm64/: sh_a64.c  sh_a64.h  sh_glue.S  sh_inst.c  sh_inst.h
shadowhook/src/main/cpp/common/: bytesig.c  bytesig.h  sh_config.h  sh_errno.c  sh_errno.h  sh_log.c  sh_log.h  sh_sig.h  sh_trampo.c  sh_trampo.h  sh_util.c  sh_util.h
shadowhook/src/main/cpp/include/: shadowhook.h
shadowhook/src/main/cpp/nothing/: sh_nothing.c
shadowhook/src/main/java/com/bytedance/shadowhook/: ShadowHook.java
systest/: build.gradle  consumer-rules.pro
systest/src/main/: AndroidManifest.xml
systest/src/main/cpp/: CMakeLists.txt  systest.c  systest.h  systest_jni.c  systest_util.c  systest_util.h
systest/src/main/java/com/bytedance/shadowhook/systest/: SysTest.java
